<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="model"
            type="com.example.shoppingapp.models.Product" />
    </data>
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        card_view:cardCornerRadius="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/product_row_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/productNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@{model.name}"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/productPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@{Double.toString(model.price)}"
                card_view:layout_constraintTop_toBottomOf="@+id/productNameTextView"
                card_view:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="@color/cardview_dark_background"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text=" PLN"
                card_view:layout_constraintTop_toBottomOf="@+id/productNameTextView"
                card_view:layout_constraintStart_toEndOf="@+id/productPriceTextView"/>
            <ImageButton
                android:id="@+id/productAddToBasketButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/basket"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
