<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="model"
            type="com.example.shoppingapp.models.Product" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ProductDetailsActivity">


        <TextView
            android:id="@+id/detailsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.name}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/detailsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{Double.toString(model.price)}'
            app:layout_constraintTop_toBottomOf="@id/detailsName"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" PLN"
            app:layout_constraintStart_toEndOf="@id/detailsPrice"
            app:layout_constraintTop_toTopOf="@id/detailsPrice"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/detailsCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Category: "
            app:layout_constraintTop_toBottomOf="@id/detailsPrice"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/detailsCategoryCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{model.category != null ? model.category.name : "No category"}'
            app:layout_constraintTop_toTopOf="@id/detailsCategory"
            app:layout_constraintStart_toEndOf="@id/detailsCategory"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/detailsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{model.description}'
            app:layout_constraintTop_toBottomOf="@id/detailsCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="italic"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
